--- a/admin_module/templates/books_index.html
+++ b/admin_module/templates/books_index.html
@@ -12,7 +12,7 @@
       <!-- <h4>Available: {{ book.available }}</h4>
       <h4>Total Copies:  {{ book.total }} </h4> -->
         <a href="{{  book.show_url }}" class="button" style="padding: 5px;margin: 5px;">Show</a>
-        <a href="{{ book.edite_url }}" class="button" style="padding: 5px;margin: 5px;">Edit</a>
+        <a href="{{ book.edit_url }}" class="button" style="padding: 5px;margin: 5px;">Edit</a>
 
         <a href="{{ book.delete_url }}" class="button" style="padding: 5px;margin: 5px;">Delete</a>
     </div>
