--- a/students/templates/students_index.html
+++ b/students/templates/students_index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base.html' %}
-{% block title %}Books{% endblock %}
+{% block title %}Students{% endblock %}
 
 {% block content %}
 
