solving logging issues

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,13 +7,13 @@
 <form method="post">
     {% csrf_token %}
     <div class="form-group">
-        {{ form.as_p }}
+        {{ form }}
     </div>
     <div class="form-group">
     <button type="submit" class="button" style="height: auto;">Login</button>
     </div>
 </form>
 {% if next %}
-    <p>You must be logged in to view this page: <a href="{{ next }}">Back</a></p>
+    <p style="display: inline-block; margin: 10px;">You must be logged in to view this page: <a href="{{ next }}" class="button">Back</a></p>
 {% endif %}
 {% endblock %}
