--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -122,6 +122,16 @@
             <div class="right">
                 <a href="{% url 'books_index' %}">Books</a>
                 <a href="{% url 'students.index' %}">Students</a>
+                {% if request.user.is_authenticated %}
+                <form  method="post"  action="{% url 'logout' %}" style="display: inline-block;">
+                    {% csrf_token %}
+                    
+                    <input type="submit" value="Logout" style="background-color: #ccc; border: none; font-weight: bold;
+                    cursor: pointer;">
+                </form>
+                {% else %}
+                <a href="{% url 'login' %}">Login</a>
+                {% endif %}
                 <a href="#">Contact US</a>
                 <a href="#">About Us</a>
             </div>
