Adding About and Contact Pages

--- a/admin_module/templates/main.html
+++ b/admin_module/templates/main.html
@@ -4,7 +4,7 @@
 {% block content %}
 <h3 style="text-align: center;">Wlcome to Book Library</h3>
 
-<ul style="text-align: center;">
+<ul  style="text-align: center;list-style: None;">
    <li><a href="{% url 'books_index' %}" class="button" style="margin: 10px;"> All Books</a>
         <a href="{% url 'book_create' %}" class="button" style="margin: 10px;">New Book</a>    
    </li> 
