--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -3,7 +3,7 @@
         <title>
             {% block title %} {% endblock %}
         </title>
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <style>
             .form-group label {
                 display: block;
@@ -81,7 +81,7 @@
             padding: 10px 20px;
         }
         .right a {
-            padding: 10px 50px;
+            padding: 10px 40px;
         }
 
 
@@ -132,8 +132,8 @@
                 {% else %}
                 <a href="{% url 'login' %}">Login</a>
                 {% endif %}
-                <a href="#">Contact US</a>
-                <a href="#">About Us</a>
+                <a href="{% url 'contact' %}">Contact US</a>
+                <a href="{% url 'about' %}">About Us</a>
             </div>
         </nav>
 
