Added student login

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -134,6 +134,7 @@
                 <a href="{% url 'contact' %}">Contact US</a>
                 <a href="{% url 'about' %}">About Us</a>
             <a href="{% url 'signup' %}">SignUp as student</a>
+            <a href="{% url 'loginAsStudent' %}">Login as student</a>
             </div>
         </nav>
 
